--- a/NEET AR 11 BIO PHASE 1/app/src/main/res/layout/activity_menu.xml
+++ b/NEET AR 11 BIO PHASE 1/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
@@ -26,6 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_menus"
-        >
+        android:layout_below="@+id/menu_toolbar">
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</RelativeLayout>
