--- a/NEET AR 11 BIO PHASE 1/app/src/main/res/values-v21/colors.xml
+++ b/NEET AR 11 BIO PHASE 1/app/src/main/res/values-v21/colors.xml
@@ -7,4 +7,7 @@
     <color name="white_transparency">#73FFFFFF</color>
     <color name="black_hints_border">#75000000</color>
     <color name="trans_related_label">#80FFFFFF</color>
+    <color name="phase_Colors">#0072bc</color>
+
+
 </resources>
