--- a/NEET AR 11 BIO/app/src/main/res/layout/settings_ar.xml
+++ b/NEET AR 11 BIO/app/src/main/res/layout/settings_ar.xml
@@ -66,12 +66,13 @@
             android:layout_below="@id/text_scale"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:visibility="gone">
             <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/get_scale"
-                android:min="5"
+                android:min="1"
                 android:max="20"
                 android:layout_gravity="center_vertical"
                 />
