--- a/NEET AR 11 BIO/app/src/main/res/layout/settings_ar.xml
+++ b/NEET AR 11 BIO/app/src/main/res/layout/settings_ar.xml
@@ -29,7 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
